--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   ],
   "scripts": {
     "build": "BABEL_ENV=build babel src --out-dir dist --source-maps --extensions .js --config-file ./babel.config.js --delete-dir-on-start --no-comments",
-    "test": "mocha --require @babel/register --require @babel/polyfill \"./{,!(node_modules)/**/}*.test.js\" --exit --require source-map-support"
+    "test": "mocha --require @babel/register --require @babel/polyfill \"./{,!(node_modules)/**/}*.test.js\" --exit --require source-map-support",
+    "demo:run": "node ./scripts/demo.js run"
   },
   "dependencies": {
     "@bottlenose/rxws": "^0.7.0",
+    "axios": "^0.21.1",
     "lodash": "^4.17.20",
+    "qs": "^6.10.1",
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
@@ -38,6 +41,7 @@
     "@bottlenose/rxfs": "^0.7.0",
     "chai": "^4.2.0",
     "commander": "^7.0.0",
+    "luxon": "^1.26.0",
     "mocha": "^8.2.1",
     "rxjs-marbles": "^6.0.1",
     "sinon": "^9.2.4"
